fix: agregar traducciones para longitud cervical y mediciones prenatales en archivos de traducción

--- a/translations/en.json
+++ b/translations/en.json
@@ -13,6 +13,7 @@
   "addData": "Add data",
   "additionalNotes": "Any additional notes",
   "additionalServices": "Pediatría y Servicios Adicionales",
+  "addMeasurement": "Agregar medición",
   "addPNSContact": "Add PNS Contact",
   "addRelationship": "Add relationship",
   "addVaccination": "Añadir Vacuna",
@@ -21,11 +22,9 @@
   "admittingDoctor": "Admitting Doctor",
   "adverseReactionRecord": "Registro de Reacciones Adversas a Vacunas",
   "adverseReactions": "Reacciones Adversas",
-  "affection": "Does the child receive affection?",
   "affectiveBond": "Vínculo Afectivo",
   "age": "Age",
   "ageGroupDetails": "Age group details",
-  "agreements": "Agreements and Commitments",
   "alcoholUse": "Alcohol Use",
   "alcoholUseDuration": "Alcohol Use Duration",
   "alive": "Alive",
@@ -52,7 +51,6 @@
   "appointmentToFulfill": "Select appointment to fulfill",
   "appointmentType": "Appointment type",
   "AtencionesPuerperio": "Postpartum Care",
-  "attendedBy": "Attended By",
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "balanceOverview": "Fluid Balance",
   "baselineHivStatus": "Baseline HIV Status",
@@ -69,16 +67,13 @@
   "birthWeight": "Peso al Nacer",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Transfusion Done",
-  "bloodPressure": "Blood Pressure (mmHg)",
   "bloodTransfusion": "Blood Transfusion",
   "bodyPosition": "Posición del Cuerpo",
   "bodyTemperature": "Temperatura Corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "breastfeedingFirstHour": "Lactancia Primera Hora",
   "cancel": "Cancel",
-  "cannotDrink": "Cannot drink or breastfeed",
   "caracteristicaLoquios": "Característica de Loquios",
-  "caregiver": "Who takes care of the child?",
   "caseEncounter": "Case management encounters",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Case Managemet",
@@ -88,6 +83,9 @@
   "cephalocaudalEvaluation": "Evaluación Cefalocaudal",
   "cephaloCaudalNeurologicalEvaluation": "Cephalocaudal and Neurological Evaluation of the Newborn",
   "cervicalDilation": "Cervical Dilation cm",
+  "cervicalLength": "Longitud Cervical",
+  "cervicalLengthChart": "Longitud Cervical por Semana Gestacional",
+  "cervicalLengthMm": "Longitud Cervical (mm)",
   "chartView": "Chart View",
   "checkFilters": "Check the filters above",
   "checkForErrors": "Por favor revise el formulario e intente nuevamente",
@@ -110,16 +108,13 @@
   "conditionSaved": "Condition saved",
   "conditionUpdated": "Condition updated",
   "congenitalDisease": "Enfermedad Congénita",
-  "consultationDate": "Consultation Date",
-  "consultationDetails": "Consultation Details",
-  "consultationReason": "Reason for Consultation",
   "consultationSaved": "Consultation Saved",
-  "consultationTime": "Consultation Time",
   "contact": "Contact",
   "contactCreated": "Contact created",
   "contacted": "Contacted",
   "contactList": "Contact list",
   "controlPuerperio": "Postpartum Checkups",
+  "controlsAndAtentions": "Atenciones y Controles",
   "coordinacion": "Coordinación",
   "cordClamping": "Cord Clamping",
   "createPatient": "Create patient",
@@ -131,8 +126,8 @@
   "culturalNotes": "Notas Culturales y Contextuales",
   "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
   "currentPregnancy": "Embarazo Actual",
+  "currentWeek": "Semana actual",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
-  "dangerSigns": "Danger Signs",
   "dataDisplayed": "Data displayed",
   "dataNowAvailable": "They are now visible on the Perinatal Register",
   "dataSaved": "Data has been saved successfully.",
@@ -148,6 +143,9 @@
   "dead": "Dead",
   "defaulterTracing": "Defaulter tracing",
   "delete": "Delete",
+  "delivery": "PARTO",
+  "deliveryAttendant": "Atendido Por",
+  "deliveryLocation": "Lugar del Parto",
   "deliveryOrAbortion": "Delivery or Abortion",
   "deliveryType": "Delivery Type",
   "demographics": "Demographics",
@@ -159,7 +157,6 @@
   "descentOfHead": "Descent of Head",
   "descriptionRequired": "Debe ingresar una descripción de la reacción",
   "detailedBreakdown": "Desglose Detallado",
-  "diagnoses": "Diagnoses",
   "Diagnóstico": "Diagnosis",
   "diastolic": "Diastolic",
   "diastolicBP": "Diastolic BP (mmHg)",
@@ -206,7 +203,6 @@
   "failedSavingRelationship": "Relationship could not be saved",
   "familyContacts": "Family contacts",
   "familyRelationshipFormTitle": "Family Relationship Form",
-  "fatherInvolvement": "Does the father participate in care?",
   "fechaYHoraAtencion": "Date and Time of the Appointment",
   "feedingOrders": "Feeding Orders",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
@@ -240,9 +236,9 @@
   "gestationalAge": "Gestational Age (weeks)",
   "gestationalAgeAtBorn": "Edad Gestacional al Nacer",
   "gestationalSize": "Gestational Size",
+  "gestationalWeeks": "Semanas Gestacionales",
   "gravidez": "Pregnancy",
   "growthChart": "Growth Chart",
-  "growthCondition": "Growth Condition",
   "headCircumference": "Head Circumference (cm)",
   "heartRate": "Heart Rate (bpm)",
   "height": "Height (cm)",
@@ -255,7 +251,6 @@
   "htsResult": "Final result",
   "htsScreening": "HTS Screening",
   "htsTestType": "Test type",
-  "illnessDuration": "Duration of Illness",
   "imc": "Body mass index (BMI)",
   "immediateAssessment": "Valoración Inmediata del Recién Nacido",
   "immediateAttention": "Atención Inmediata",
@@ -265,7 +260,6 @@
   "immunizationPlanBuilder": "Immunization Plan Management",
   "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactive",
-  "inactiveCases": "Inactive Cases",
   "inPatientSummary": "In Patient Summary",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "IPV Outcome",
@@ -281,7 +275,6 @@
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
-  "lethargy": "Lethargy or coma",
   "limbs": "Limbs",
   "limbsOther": "Other fro limbs",
   "limite": "Límite",
@@ -295,7 +288,6 @@
   "loadingPatient": "Loding Patient...",
   "location": "Location",
   "male": "Masculino",
-  "malnutrition": "Severe visible malnutrition",
   "manager": "Case Manager",
   "manageVaccinationSchedule": "Manage Schedule",
   "maternaHistory": "Antecedente de Historia Materna",
@@ -332,20 +324,19 @@
   "newbornVitals": "Signos Vitales del Recién Nacido",
   "newCredEncounter": "New CRED Encounter",
   "next": "Next",
-  "nextAppointment": "Next Appointment",
   "nextMonth": "Next month",
   "nipples": "nipples",
   "no": "No",
-  "noBreastfeeding": "Does not want to breastfeed or suck",
-  "noChartDataAvailable": "No chart data available",
   "noConditionsToDisplay": "No conditions to display",
   "noContactToDisplay": "There is no contact data to display for this patient.",
   "noCurrentAppointments": "There are no appointments scheduled for today to display for this patient",
+  "noDataAvailable": "No hay datos disponibles para mostrar",
   "noDataAvailableDescription": "No data available",
   "noEncounterToDisplay": "There are no encounters to display for this patient.",
   "noFamilyHistoryData": "There is no family history data to display for this patient.",
   "noHistoricalData": "No hay datos históricos disponibles para esta métrica",
   "noLegendItems": "No hay elementos de leyenda disponibles",
+  "noMeasurementDataAvailable": "No hay datos de mediciones disponibles",
   "nonCredControls": "Controles NO CRED",
   "noObservationsFound": "No observations found",
   "noPastAppointments": "There are no past appointments to display for this patient",
@@ -355,18 +346,15 @@
   "normalBajo": "Normal Bajo",
   "nose": "nose",
   "noseOther": "Other for nose",
-  "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
   "notApplicable": "No aplica",
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
   "Nueva Atención Postnatal": "New Postnatal Care",
   "nursingDiagnosis": "Diagnóstico de Enfermería",
-  "nutritionalStatus": "Nutritional Status",
   "observacion": "Observación",
   "observation": "Observation",
   "observationGroup": "Grupo de Observación",
-  "observations": "Observations",
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia",
@@ -381,7 +369,6 @@
   "pageNumber": "Page number",
   "paginationPageText_one": "of {{count}} pages",
   "paginationPageText_other": "of {{count}} pages",
-  "paleness": "Severe palmar paleness",
   "partoAborto": "Abortion",
   "partoAlTermino": "Full-term deliveries",
   "partograph": "Partograph",
@@ -394,6 +381,7 @@
   "patientFamilyTable": "Patient family table",
   "patientInfo": "Información del Paciente",
   "pending": "Pending",
+  "percentiles": "Percentiles",
   "perinatalDataRecorded": "Perinatal Data Recorded",
   "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRecord": "Registro Perinatal",
@@ -401,7 +389,6 @@
   "pesoCorporal": "Body Weight (kg)",
   "pesoMadre": "Maternal Weight (kg)",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
-  "physicalExam": "Physical Examination",
   "PielYMucosas": "Skin and Mucosa",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
   "pleaseFillField": "Please complete the required fields",
@@ -416,11 +403,17 @@
   "postOperativeDiagnosis": "Post Operative Diagnosis",
   "preferedPNSAproach": "Prefered PNS Aproach",
   "pregnancies": "Embarazos",
+  "pregnancy": "EMBARAZO",
+  "pregnancyBirth": "Embarazo y Parto",
+  "pregnancyNumber": "Nº de Embarazo (Gravida)",
   "prematureBirths": "Prematuros",
   "prenatalAntecedents": " Prenatal History",
   "prenatalCare": "Control Prenatal",
   "prenatalCareChart": "Control Prenatal",
+  "prenatalCareLocation": "Lugar de Atenciones Prenatales",
+  "prenatalCareNumber": "Nº de Atenciones Prenatales",
   "prenatalCareTabs": "Pestañas de Control Prenatal",
+  "prenatalMeasurements": "Mediciones Prenatales",
   "presentación": "Presentation (C/P/NA)",
   "presionDiastolica": "Diastolic Pressure",
   "presionSistolica": "Systolic Pressure",
@@ -430,7 +423,6 @@
   "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Priority Of Admission",
   "proximaCita": "Next Appointment",
-  "psychomotorDevelopment": "Psychomotor Development",
   "puerperioInmediato": "Puerperio Inmediato",
   "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
@@ -440,10 +432,10 @@
   "recordAnthropometrics": "Registrar Datos Antropométricos",
   "recordFluidBalance": "Registrar Balance de Líquidos",
   "recordLabourDetails": "Record labour details",
-  "referral": "Referral",
   "referrals": "Referrals",
   "refreshing": "Refreshing...",
   "registerReaction": "Registrar Reacción",
+  "relatedData": "related data",
   "relation": "Relation",
   "relationship": "Relationship",
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to proceed?",
@@ -459,7 +451,6 @@
   "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
   "retraso": "Retraso",
   "riesgo": "En riesgo",
-  "riskFactors": "Risk Factors",
   "RlshipError": "Request Failed.......",
   "roomingIn": "Alojamiento Conjunto",
   "rural": "Rural/Andino",
@@ -474,7 +465,6 @@
   "searchConditions": "Search conditions",
   "searching": "Searching",
   "seeAll": "See all",
-  "seizures": "Seizures",
   "selectSeverity": "Seleccione severidad",
   "selectVaccine": "Select Vaccine",
   "service": "Service",
@@ -540,8 +530,6 @@
   "total": "Resultado General",
   "tracingNumber": "Tracing No.",
   "tracingType": "Tracing Type",
-  "trauma": "Trauma / Burns",
-  "treatment": "Treatment",
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
   "umbilicalCord": " Umbilical cord",
@@ -556,6 +544,8 @@
   "urineCount": "Urine Count",
   "urineGrams": "Urine Volume (g/mL)",
   "uterineHeight": "Uterine Height (cm)",
+  "uterineHeightChart": "Altura Uterina por Semana Gestacional",
+  "uterineHeightCm": "Altura Uterina (cm)",
   "vaccinationSchedule": "Vaccination Schedule",
   "vaccinationScheduleBuilder": "Vaccination Schedule Builder",
   "vaccinationTable": "Tabla de vacunaciones",
@@ -567,15 +557,13 @@
   "viewEncounter": "View",
   "viewSelector": "Select view type",
   "visitDate": "Screening Date",
-  "vitalSigns": "Vital Signs",
   "vitaminKAdmin": "Vitamin K administration",
   "vomitCount": "Vomit Count",
   "vomitGramsML": "Vomit Volume (g/mL)",
-  "vomiting": "Vomits everything",
   "weeks": "semanas",
   "weight": "Weight (kg)",
   "weightForGestationalAge": "Peso para Edad Gestacional",
   "wellChildCare": "Control de Niño Sano",
-  "wellChildControls": "Well Child Controls",
-  "yes": "Yes"
+  "yes": "Yes",
+  "zScores": "Z-Scores"
 }
