--- a/translations/es.json
+++ b/translations/es.json
@@ -13,6 +13,7 @@
   "addData": "Agregar datos",
   "additionalNotes": "Notas adicionales",
   "additionalServices": "Pediatría y Servicios Adicionales",
+  "addMeasurement": "Agregar medición",
   "addPNSContact": "Agregar contacto de pareja",
   "addRelationship": "Agregar relación",
   "addVaccination": "Agregar vacunación",
@@ -21,11 +22,9 @@
   "admittingDoctor": "Médico responsable de la admisión",
   "adverseReactionRecord": "Registro de reacciones adversas",
   "adverseReactions": "Reacciones Adversas",
-  "affection": "¿El niño recibe afecto?",
   "affectiveBond": "Vínculo afectivo",
   "age": "Edad",
   "ageGroupDetails": "Detalles del grupo de edad",
-  "agreements": "Acuerdos y compromisos",
   "alcoholUse": "Uso de alcohol",
   "alcoholUseDuration": "Duración del consumo de alcohol",
   "alive": "Vivo",
@@ -52,7 +51,6 @@
   "appointmentToFulfill": "Seleccione la cita a atender",
   "appointmentType": "Tipo de cita",
   "AtencionesPuerperio": "Atenciones puerperio",
-  "attendedBy": "Atendido por",
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
   "balanceOverview": "Balance de líquidos",
   "baselineHivStatus": "Estado basal del VIH",
@@ -69,16 +67,13 @@
   "birthWeight": "Peso al Nacer",
   "bloodGroup": "Grupo sanguíneo",
   "bloodLoss": "Pérdida de sangre",
-  "bloodPressure": "Presión arterial (mmHg)",
   "bloodTransfusion": "Transfusión de sangre",
   "bodyPosition": "Posición corporal",
   "bodyTemperature": "Temperatura corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "breastfeedingFirstHour": "Lactancia Primera Hora",
   "cancel": "Cancelar",
-  "cannotDrink": "No puede beber o amamantar",
   "caracteristicaLoquios": "Característica de Loquios",
-  "caregiver": "¿Quién cuida al niño?",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Gestión de casos",
@@ -88,6 +83,9 @@
   "cephalocaudalEvaluation": "Evaluación Cefalocaudal",
   "cephaloCaudalNeurologicalEvaluation": "Evaluación céfalocaudal y neurológica del recién nacido",
   "cervicalDilation": "Dilación cervical (cm)",
+  "cervicalLength": "Longitud Cervical",
+  "cervicalLengthChart": "Longitud Cervical por Semana Gestacional",
+  "cervicalLengthMm": "Longitud Cervical (mm)",
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros seleccionados",
   "checkForErrors": "Por favor revise el formulario e intente nuevamente",
@@ -110,16 +108,13 @@
   "conditionSaved": "Condición guardada",
   "conditionUpdated": "Condición actualizada",
   "congenitalDisease": "Enfermedad Congénita",
-  "consultationDate": "Fecha de consulta",
-  "consultationDetails": "Detalles de la consulta",
-  "consultationReason": "Motivo de consulta",
   "consultationSaved": "Consulta guardada",
-  "consultationTime": "Hora de consulta",
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
   "contactList": "Lista de contactos",
   "controlPuerperio": "Control de puerperio",
+  "controlsAndAtentions": "Atenciones y Controles",
   "coordinacion": "Coordinación",
   "cordClamping": "Clampeo del cordón",
   "createPatient": "Crear paciente",
@@ -131,8 +126,8 @@
   "culturalNotes": "Notas Culturales y Contextuales",
   "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
   "currentPregnancy": "Embarazo Actual",
+  "currentWeek": "Semana actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
-  "dangerSigns": "Signos de peligro",
   "dataDisplayed": "Datos mostrados",
   "dataNowAvailable": "Ahora son visibles en el Registro Perinatal",
   "dataSaved": "Los datos se han guardado exitosamente.",
@@ -148,6 +143,9 @@
   "dead": "Muerto",
   "defaulterTracing": "Seguimiento de pacientes incumplidos",
   "delete": "Borrar",
+  "delivery": "PARTO",
+  "deliveryAttendant": "Atendido Por",
+  "deliveryLocation": "Lugar del Parto",
   "deliveryOrAbortion": "Partos y Abortos",
   "deliveryType": "Tipo de parto",
   "demographics": "Datos demográficos",
@@ -159,7 +157,6 @@
   "descentOfHead": "Descenso de la presentación",
   "descriptionRequired": "Se requiere una descripción",
   "detailedBreakdown": "Desglose Detallado",
-  "diagnoses": "Diagnósticos",
   "Diagnóstico": "Diagnóstico",
   "diastolic": "Diastólico",
   "diastolicBP": "Presión diastólica (mmHg)",
@@ -206,7 +203,6 @@
   "failedSavingRelationship": "No se pudo guardar la relación",
   "familyContacts": "Contactos familiares",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
-  "fatherInvolvement": "¿El padre participa en el cuidado?",
   "fechaYHoraAtencion": "Fecha y hora de atención",
   "feedingOrders": "Órdenes de alimentación",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
@@ -240,9 +236,9 @@
   "gestationalAge": "Edad gestacional (semanas)",
   "gestationalAgeAtBorn": "Edad Gestacional al Nacer",
   "gestationalSize": "Tamaño gestacional",
+  "gestationalWeeks": "Semanas Gestacionales",
   "gravidez": "Gravidez",
   "growthChart": "Evaluación del Crecimiento y Desarrollo",
-  "growthCondition": "Estado de crecimiento",
   "headCircumference": "Perímetro cefálico",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
@@ -255,7 +251,6 @@
   "htsResult": "Resultado de la prueba de HTS",
   "htsScreening": "Tamizaje de VIH (HTS)",
   "htsTestType": "Tipo de prueba de detección de VIH",
-  "illnessDuration": "Duración de la enfermedad",
   "imc": "IMC - Índice de Masa Corporal",
   "immediateAssessment": "Valoración inmediata del recién nacido",
   "immediateAttention": "Atención Inmediata",
@@ -265,7 +260,6 @@
   "immunizationPlanBuilder": "Gestión del plan de inmunización",
   "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactivo",
-  "inactiveCases": "Casos inactivos",
   "inPatientSummary": "Resumen del paciente",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de evaluación IPV",
@@ -281,7 +275,6 @@
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
-  "lethargy": "Letargo o coma",
   "limbs": "Extremidades",
   "limbsOther": "Otras observaciones sobre extremidades",
   "limite": "Límite",
@@ -295,7 +288,6 @@
   "loadingPatient": "Cargando paciente ...",
   "location": "Ubicación",
   "male": "Masculino",
-  "malnutrition": "Desnutrición severa visible",
   "manager": "Manejo de casos",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
   "maternaHistory": "Antecedente de Historia Materna",
@@ -332,20 +324,19 @@
   "newbornVitals": "Signos Vitales del Recién Nacido",
   "newCredEncounter": "Nuevo control CRED",
   "next": "Siguiente",
-  "nextAppointment": "Próxima cita",
   "nextMonth": "Siguiente mes",
   "nipples": "Pezones",
   "no": "No",
-  "noBreastfeeding": "No quiere amamantar o succionar",
-  "noChartDataAvailable": "No hay datos disponibles",
   "noConditionsToDisplay": "No hay condiciones para mostrar.",
   "noContactToDisplay": "No hay datos de contacto disponibles para este paciente.",
   "noCurrentAppointments": "No hay citas programadas para hoy para este paciente.",
+  "noDataAvailable": "No hay datos disponibles para mostrar",
   "noDataAvailableDescription": "No hay datos disponibles.",
   "noEncounterToDisplay": "No hay encuentros que mostrar para este paciente.",
   "noFamilyHistoryData": "No hay antecedentes familiares registrados para este paciente.",
   "noHistoricalData": "No hay datos históricos disponibles para esta métrica",
   "noLegendItems": "No hay elementos de leyenda disponibles",
+  "noMeasurementDataAvailable": "No hay datos de mediciones disponibles",
   "nonCredControls": "Controles NO CRED",
   "noObservationsFound": "No se encontraron observaciones",
   "noPastAppointments": "No hay citas previas registradas para este paciente.",
@@ -355,18 +346,15 @@
   "normalBajo": "Normal Bajo",
   "nose": "Nariz",
   "noseOther": "Otras observaciones sobre la nariz",
-  "nosologicalDiagnosis": "Diagnóstico nosológico o sindrómico",
   "notApplicable": "No aplica",
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas registradas para este paciente.",
   "Nueva Atención Postnatal": "Nueva atención postnatal",
   "nursingDiagnosis": "Diagnóstico de enfermería",
-  "nutritionalStatus": "Estado nutricional",
   "observacion": "Observación",
   "observation": "Observación",
   "observationGroup": "Grupo de Observación",
-  "observations": "Observaciones",
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia del evento",
@@ -382,7 +370,6 @@
   "paginationPageText_one": "de {{count}} páginas",
   "paginationPageText_many": "de {{count}} páginas",
   "paginationPageText_other": "de {{count}} páginas",
-  "paleness": "Palidez palmar severa",
   "partoAborto": "Abortos",
   "partoAlTermino": "Partos a término",
   "partograph": "Partograma",
@@ -395,6 +382,7 @@
   "patientFamilyTable": "Tabla de contactos familiares",
   "patientInfo": "Información del Paciente",
   "pending": "Pendiente",
+  "percentiles": "Percentiles",
   "perinatalDataRecorded": "Datos perinatales registrados",
   "perinatalDataSaveError": "Error al guardar datos perinatales",
   "perinatalRecord": "Registro Perinatal",
@@ -402,7 +390,6 @@
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
   "physicalAssault": "1. ¿Alguna vez te ha golpeado, pateado, abofeteado o lastimado físicamente de alguna manera?",
-  "physicalExam": "Examen físico",
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
   "pleaseFillField": "Por favor complete los campos requeridos",
@@ -417,11 +404,17 @@
   "postOperativeDiagnosis": "Diagnóstico postoperatorio",
   "preferedPNSAproach": "Enfoque PNS preferido",
   "pregnancies": "Embarazos",
+  "pregnancy": "Embarazo",
+  "pregnancyBirth": "Embarazo y Parto",
+  "pregnancyNumber": "Nº de Embarazo (Gravida)",
   "prematureBirths": "Prematuros",
   "prenatalAntecedents": "Antecedentes prenatales",
   "prenatalCare": "Control Prenatal",
   "prenatalCareChart": "Control Prenatal",
+  "prenatalCareLocation": "Lugar de Atenciones Prenatales",
+  "prenatalCareNumber": "Nº de Atenciones Prenatales",
   "prenatalCareTabs": "Pestañas de Control Prenatal",
+  "prenatalMeasurements": "Mediciones Prenatales",
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Presión sistólica",
@@ -431,7 +424,6 @@
   "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Prioridad de admisión",
   "proximaCita": "Próxima Cita",
-  "psychomotorDevelopment": "Desarrollo psicomotor",
   "puerperioInmediato": "Puerperio Inmediato",
   "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
@@ -441,10 +433,10 @@
   "recordAnthropometrics": "Registrar Datos Antropométricos",
   "recordFluidBalance": "Registrar Balance de Líquidos",
   "recordLabourDetails": "Registrar detalles del trabajo de parto",
-  "referral": "Referencia",
   "referrals": "Referencias",
   "refreshing": "Refrescando...",
   "registerReaction": "Registrar reacción",
+  "relatedData": "datos relacionados",
   "relation": "Relación",
   "relationship": "Relación",
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
@@ -460,7 +452,6 @@
   "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
   "retraso": "Retraso",
   "riesgo": "En riesgo",
-  "riskFactors": "Factores de riesgo",
   "RlshipError": "Solicitud fallida",
   "roomingIn": "Alojamiento Conjunto",
   "rural": "Rural/Andino",
@@ -475,7 +466,6 @@
   "searchConditions": "Condiciones de búsqueda",
   "searching": "Buscando...",
   "seeAll": "Ver Todo",
-  "seizures": "Convulsiones",
   "selectSeverity": "Seleccione la severidad",
   "selectVaccine": "Seleccione vacuna",
   "service": "Servicio",
@@ -541,8 +531,6 @@
   "total": "Resultado General",
   "tracingNumber": "N.º de rastreo",
   "tracingType": "Tipo de rastreo",
-  "trauma": "Trauma / Quemaduras",
-  "treatment": "Tratamiento",
   "type": "Tipo",
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
@@ -557,6 +545,8 @@
   "urineCount": "Número de micciones",
   "urineGrams": "Volumen de orina (g/mL)",
   "uterineHeight": "Altura uterina (cm)",
+  "uterineHeightChart": "Altura Uterina por Semana Gestacional",
+  "uterineHeightCm": "Altura Uterina (cm)",
   "vaccinationSchedule": "Calendario de vacunación",
   "vaccinationScheduleBuilder": "Gestor del calendario de vacunación",
   "vaccinationTable": "Tabla de vacunaciones",
@@ -568,15 +558,13 @@
   "viewEncounter": "Ver encuentro",
   "viewSelector": "Seleccionar tipo de vista",
   "visitDate": "Fecha de visita",
-  "vitalSigns": "Signos Vitales",
   "vitaminKAdmin": "Administración de vitamina K",
   "vomitCount": "Número de vómitos",
   "vomitGramsML": "Volumen de vómitos (g/mL)",
-  "vomiting": "Vomita todo",
   "weeks": "semanas",
   "weight": "Peso",
   "weightForGestationalAge": "Peso para Edad Gestacional",
   "wellChildCare": "Control de Niño Sano",
-  "wellChildControls": "Controles de Niño Sano",
-  "yes": "Sí"
+  "yes": "Sí",
+  "zScores": "Z-Scores"
 }
