fix: actualizar importaciones de PatientSearchCreate en varios componentes y agregar traducciones para nuevos campos en archivos de traducción

--- a/translations/en.json
+++ b/translations/en.json
@@ -16,6 +16,8 @@
   "addMeasurement": "Agregar medición",
   "addPNSContact": "Add PNS Contact",
   "addRelationship": "Add relationship",
+  "address": "Address",
+  "addressPlaceholder": "Physical Address/Landmark",
   "addVaccination": "Añadir Vacuna",
   "admissionDate": "Admission Date",
   "admissionWard": "Admission Ward",
@@ -92,6 +94,7 @@
   "checkForValidity": "Some of the values entered may be invalid",
   "chestCircumference": "Chest Circumference",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
+  "chooseOption": "Choose option",
   "chronicDisease": "Chronic Disease",
   "clavicle": "Clavicle",
   "clientEligibility": "Eligible",
@@ -135,6 +138,8 @@
   "dataTabs": "Data selection tabs",
   "date": "Schrduled date",
   "date&Time": "Date & time",
+  "dateOfBirth": "Date of birth",
+  "dateOfBirthPlaceholder": "mm/dd/yyyy",
   "dateOfDelivery": "Date of Delivery",
   "dateOfOnset": "Date of onset",
   "dateOfSurgery": "Date of Surgery",
@@ -214,6 +219,8 @@
   "finalDischargeDiagnosis": "Final Discharge Diagnosis",
   "finalOutcome": "Final Outcome",
   "FirmaYSello": "Signature and Stamp",
+  "firstName": "First name",
+  "firstNamePlaceholder": "First name",
   "fluidBalance": "Balance de Líquidos",
   "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
   "fluidBalanceRecorded": "Balance de Líquidos registrado",
@@ -227,6 +234,7 @@
   "formTitle": "Fill in the form details",
   "frecuenciaCardiaca": "Heart Rate",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
+  "fromAge": "From Age",
   "gastricLavage": "Lavado Gástrico",
   "gastricLavageCount": "Cantidad de Lavados Gástricos",
   "generalObservations": "Observaciones Generales",
@@ -272,6 +280,10 @@
   "labourDetails": "Labour Details",
   "labourHistorySummary": "Summary of labour history",
   "labourMetricDisplayed": "Labour History Metric",
+  "lastName": "Last name",
+  "lastName2": "Segundo Apellido",
+  "lastNamePlaceholder": "Last name",
+  "lastNamePlaceholder2": "Segundo Apellido",
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
@@ -290,6 +302,7 @@
   "male": "Masculino",
   "manager": "Case Manager",
   "manageVaccinationSchedule": "Manage Schedule",
+  "maritalStatus": "Marital status",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Maternal Condition",
   "maternalHistory": "Antecedentes Maternos",
@@ -298,6 +311,8 @@
   "maternalWeight": "Maternal Weight (Kg)",
   "medicalHistory": "Medical History",
   "metricDisplayed": "Métrica mostrada",
+  "middleName": "Middle name",
+  "middleNamePlaceholder": "Middle name",
   "mild": "Leve",
   "missedAppointmentDate": "Date Missed Appointment",
   "modeOfDelivery": "Mode of Delivery",
@@ -380,6 +395,8 @@
   "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Patient family table",
   "patientInfo": "Información del Paciente",
+  "patientNotFound": "Patient Not Found",
+  "patientPlaceHolder": "Search patient",
   "pending": "Pending",
   "percentiles": "Percentiles",
   "perinatalDataRecorded": "Perinatal Data Recorded",
@@ -388,6 +405,8 @@
   "perinatalRegister": "Perinatal Maternal Carnet",
   "pesoCorporal": "Body Weight (kg)",
   "pesoMadre": "Maternal Weight (kg)",
+  "phoneNumber": "Phone number",
+  "phoneNumberPlaceholder": "Phone number",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
   "PielYMucosas": "Skin and Mucosa",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
@@ -463,6 +482,7 @@
   "scheduled": "Próxima dosis",
   "searchConditions": "Search conditions",
   "searching": "Searching",
+  "searchPatient": "Search patient",
   "seeAll": "See all",
   "selectSeverity": "Seleccione severidad",
   "selectVaccine": "Select Vaccine",
