--- a/translations/es.json
+++ b/translations/es.json
@@ -16,6 +16,8 @@
   "addMeasurement": "Agregar medición",
   "addPNSContact": "Agregar contacto de pareja",
   "addRelationship": "Agregar relación",
+  "address": "Address",
+  "addressPlaceholder": "Physical Address/Landmark",
   "addVaccination": "Agregar vacunación",
   "admissionDate": "Fecha de admisión",
   "admissionWard": "Sala de admisión",
@@ -92,6 +94,7 @@
   "checkForValidity": "Algunos valores ingresados pueden ser inválidos",
   "chestCircumference": "Perímetro torácico",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
+  "chooseOption": "Choose option",
   "chronicDisease": "Enfermedad crónica",
   "clavicle": "Clavícula",
   "clientEligibility": "Elegibilidad del paciente",
@@ -135,6 +138,8 @@
   "dataTabs": "Pestañas de selección de datos",
   "date": "Programada de fecha",
   "date&Time": "Fecha y Hora",
+  "dateOfBirth": "Date of birth",
+  "dateOfBirthPlaceholder": "mm/dd/yyyy",
   "dateOfDelivery": "Fecha de parto",
   "dateOfOnset": "Fecha de inicio",
   "dateOfSurgery": "Fecha de cirugía",
@@ -214,6 +219,8 @@
   "finalDischargeDiagnosis": "Diagnóstico al alta",
   "finalOutcome": "Resultado final",
   "FirmaYSello": "Firma y sello",
+  "firstName": "First name",
+  "firstNamePlaceholder": "First name",
   "fluidBalance": "Balance de Líquidos",
   "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
   "fluidBalanceRecorded": "Balance de Líquidos registrado",
@@ -227,6 +234,7 @@
   "formTitle": "Complete los detalles del formulario",
   "frecuenciaCardiaca": "Frecuencia cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardíaca fetal (por min.)",
+  "fromAge": "From Age",
   "gastricLavage": "Lavado gástrico",
   "gastricLavageCount": "Cantidad de lavados gástricos",
   "generalObservations": "Observaciones Generales",
@@ -272,6 +280,10 @@
   "labourDetails": "Detalles del trabajo de parto",
   "labourHistorySummary": "Resumen del embarazo y parto",
   "labourMetricDisplayed": "Métricas del trabajo de parto mostradas",
+  "lastName": "Last name",
+  "lastName2": "Segundo Apellido",
+  "lastNamePlaceholder": "Last name",
+  "lastNamePlaceholder2": "Segundo Apellido",
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
@@ -290,6 +302,7 @@
   "male": "Masculino",
   "manager": "Manejo de casos",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
+  "maritalStatus": "Marital status",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Condición materna",
   "maternalHistory": "Antecedentes maternos",
@@ -298,6 +311,8 @@
   "maternalWeight": "Peso materno",
   "medicalHistory": "Antecedentes médicos",
   "metricDisplayed": "Métrica mostrada",
+  "middleName": "Middle name",
+  "middleNamePlaceholder": "Middle name",
   "mild": "Leve",
   "missedAppointmentDate": "Fecha de cita perdida",
   "modeOfDelivery": "Tipo de parto",
@@ -381,6 +396,8 @@
   "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Tabla de contactos familiares",
   "patientInfo": "Información del Paciente",
+  "patientNotFound": "Patient Not Found",
+  "patientPlaceHolder": "Search patient",
   "pending": "Pendiente",
   "percentiles": "Percentiles",
   "perinatalDataRecorded": "Datos perinatales registrados",
@@ -389,6 +406,8 @@
   "perinatalRegister": "Carnet Materno Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
+  "phoneNumber": "Phone number",
+  "phoneNumberPlaceholder": "Phone number",
   "physicalAssault": "1. ¿Alguna vez te ha golpeado, pateado, abofeteado o lastimado físicamente de alguna manera?",
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
@@ -464,6 +483,7 @@
   "scheduled": "Programado",
   "searchConditions": "Condiciones de búsqueda",
   "searching": "Buscando...",
+  "searchPatient": "Search patient",
   "seeAll": "Ver Todo",
   "selectSeverity": "Seleccione la severidad",
   "selectVaccine": "Seleccione vacuna",
