--- a/translations/es.json
+++ b/translations/es.json
@@ -219,8 +219,8 @@
   "finalDischargeDiagnosis": "Diagnóstico al alta",
   "finalOutcome": "Resultado final",
   "FirmaYSello": "Firma y sello",
-  "firstName": "First name",
-  "firstNamePlaceholder": "First name",
+  "firstName": "Primer Nombre",
+  "firstNamePlaceholder": "Primer Nombre",
   "fluidBalance": "Balance de Líquidos",
   "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
   "fluidBalanceRecorded": "Balance de Líquidos registrado",
@@ -280,10 +280,10 @@
   "labourDetails": "Detalles del trabajo de parto",
   "labourHistorySummary": "Resumen del embarazo y parto",
   "labourMetricDisplayed": "Métricas del trabajo de parto mostradas",
-  "lastName": "Last name",
-  "lastName2": "Segundo Apellido",
-  "lastNamePlaceholder": "Last name",
-  "lastNamePlaceholder2": "Segundo Apellido",
+  "lastName": "Apellido Paterno",
+  "lastName2": "Apellido Materno",
+  "lastNamePlaceholder": "Apellido",
+  "lastNamePlaceholder2": "Apellido",
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
