fix: actualizar traducciones de términos clave en el archivo es.json

--- a/translations/es.json
+++ b/translations/es.json
@@ -16,8 +16,8 @@
   "addMeasurement": "Agregar medición",
   "addPNSContact": "Agregar contacto de pareja",
   "addRelationship": "Agregar relación",
-  "address": "Address",
-  "addressPlaceholder": "Physical Address/Landmark",
+  "address": "Dirección",
+  "addressPlaceholder": "Dirección Actual",
   "addVaccination": "Agregar vacunación",
   "admissionDate": "Fecha de admisión",
   "admissionWard": "Sala de admisión",
@@ -94,7 +94,7 @@
   "checkForValidity": "Algunos valores ingresados pueden ser inválidos",
   "chestCircumference": "Perímetro torácico",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
-  "chooseOption": "Choose option",
+  "chooseOption": "Seleccionar opción",
   "chronicDisease": "Enfermedad crónica",
   "clavicle": "Clavícula",
   "clientEligibility": "Elegibilidad del paciente",
@@ -138,8 +138,8 @@
   "dataTabs": "Pestañas de selección de datos",
   "date": "Programada de fecha",
   "date&Time": "Fecha y Hora",
-  "dateOfBirth": "Date of birth",
-  "dateOfBirthPlaceholder": "mm/dd/yyyy",
+  "dateOfBirth": "Fecha de Nacimiento",
+  "dateOfBirthPlaceholder": "dd/mm/yyyy",
   "dateOfDelivery": "Fecha de parto",
   "dateOfOnset": "Fecha de inicio",
   "dateOfSurgery": "Fecha de cirugía",
@@ -302,7 +302,7 @@
   "male": "Masculino",
   "manager": "Manejo de casos",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
-  "maritalStatus": "Marital status",
+  "maritalStatus": "Estado civil",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Condición materna",
   "maternalHistory": "Antecedentes maternos",
@@ -311,8 +311,8 @@
   "maternalWeight": "Peso materno",
   "medicalHistory": "Antecedentes médicos",
   "metricDisplayed": "Métrica mostrada",
-  "middleName": "Middle name",
-  "middleNamePlaceholder": "Middle name",
+  "middleName": "Segundo Nombre",
+  "middleNamePlaceholder": "Segundo Nombre",
   "mild": "Leve",
   "missedAppointmentDate": "Fecha de cita perdida",
   "modeOfDelivery": "Tipo de parto",
@@ -396,8 +396,8 @@
   "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Tabla de contactos familiares",
   "patientInfo": "Información del Paciente",
-  "patientNotFound": "Patient Not Found",
-  "patientPlaceHolder": "Search patient",
+  "patientNotFound": "Paciente no encontrado",
+  "patientPlaceHolder": "Buscar Paciente",
   "pending": "Pendiente",
   "percentiles": "Percentiles",
   "perinatalDataRecorded": "Datos perinatales registrados",
@@ -406,8 +406,8 @@
   "perinatalRegister": "Carnet Materno Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
-  "phoneNumber": "Phone number",
-  "phoneNumberPlaceholder": "Phone number",
+  "phoneNumber": "Número de Contacto",
+  "phoneNumberPlaceholder": "Número de Contacto",
   "physicalAssault": "1. ¿Alguna vez te ha golpeado, pateado, abofeteado o lastimado físicamente de alguna manera?",
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
