--- a/translations/es.json
+++ b/translations/es.json
@@ -115,7 +115,7 @@
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
-  "contactList": "Lista de contactos",
+  "contactList": "Contactos Sexuales",
   "controlPuerperio": "Control de puerperio",
   "controlsAndAtentions": "Atenciones y Controles",
   "coordinacion": "Coordinación",
@@ -206,7 +206,7 @@
   "ExamenGenitalesExternos": "Examen de genitales externos",
   "failedDeleting": "No se pudo eliminar",
   "failedSavingRelationship": "No se pudo guardar la relación",
-  "familyContacts": "Contactos familiares",
+  "familyContacts": "Relaciones Familiares",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
   "fechaYHoraAtencion": "Fecha y hora de atención",
   "feedingOrders": "Órdenes de alimentación",
