fix: corregir importación de componente y agregar traducciones para familia y contactos sexuales

--- a/translations/es.json
+++ b/translations/es.json
@@ -206,6 +206,7 @@
   "ExamenGenitalesExternos": "Examen de genitales externos",
   "failedDeleting": "No se pudo eliminar",
   "failedSavingRelationship": "No se pudo guardar la relación",
+  "family": "Familia",
   "familyContacts": "Relaciones Familiares",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
   "fechaYHoraAtencion": "Fecha y hora de atención",
@@ -493,6 +494,8 @@
   "severityRequired": "Debe seleccionar la severidad",
   "sex": "Sexo",
   "sexualAssault": "3. ¿Alguna vez te ha obligado a hacer algo sexual que te hizo sentir incómoda?",
+  "sexualContactForm": "Formulario de Contactos Sexuales",
+  "sexualContacts": "Contactos Sexuales",
   "show": "Mostrar",
   "SignosYsíntomasPrincipales": "Signos y síntomas principales",
   "situación": "Situación (L, T, Na)",
