--- a/translations/en.json
+++ b/translations/en.json
@@ -206,6 +206,7 @@
   "ExamenGenitalesExternos": "External Genital Examination",
   "failedDeleting": "couldn't be deleted",
   "failedSavingRelationship": "Relationship could not be saved",
+  "family": "Familia",
   "familyContacts": "Family contacts",
   "familyRelationshipFormTitle": "Family Relationship Form",
   "fechaYHoraAtencion": "Date and Time of the Appointment",
@@ -492,6 +493,8 @@
   "severityRequired": "Debe seleccionar la severidad",
   "sex": "Sex",
   "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
+  "sexualContactForm": "Formulario de Contactos Sexuales",
+  "sexualContacts": "Contactos Sexuales",
   "show": "Show",
   "SignosYsíntomasPrincipales": "Main signs and symptoms",
   "situación": "Situation (L,T,NA)",
