--- a/translations/en.json
+++ b/translations/en.json
@@ -47,6 +47,9 @@
   "apgar1Min": "Apgar 1 Minuto",
   "apgar5": "APGAR 5 minutos",
   "apgar5Min": "Apgar 5 Minutos",
+  "appointmentCancelError": "Error cancelling appointment",
+  "appointmentCancelled": "Appointment cancelled",
+  "appointmentCancelledSuccessfully": "Appointment cancelled successfully",
   "appointmentCheckedIn": "Appointment Checked In",
   "appointmentMarkedChecked": "Appointment marked as Checked In",
   "appointments": "Appointments",
@@ -74,7 +77,10 @@
   "bodyTemperature": "Temperatura Corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "breastfeedingFirstHour": "Lactancia Primera Hora",
+  "calculateBirthDate": "Calculate birth date",
   "cancel": "Cancel",
+  "cancelAppointment": "Cancel appointment",
+  "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
   "caracteristicaLoquios": "Característica de Loquios",
   "caseEncounter": "Case management encounters",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
@@ -105,11 +111,14 @@
   "cm": "cm",
   "completed": "Administrado",
   "condition": "Condition",
+  "conditionDeleted": "Condition deleted",
+  "conditionDeletedSuccessfully": "The condition has been deleted successfully",
   "conditionNowVisible": "It is now visible on the Conditions page",
   "conditionRequired": "A condition is required",
   "conditions": "Conditions",
   "conditionSaved": "Condition saved",
   "conditionUpdated": "Condition updated",
+  "confirmationQuestion": "Are you sure you want to delete relationship?",
   "congenitalDisease": "Enfermedad Congénita",
   "consultationSaved": "Consultation Saved",
   "contact": "Contact",
@@ -148,6 +157,10 @@
   "dead": "Dead",
   "defaulterTracing": "Defaulter tracing",
   "delete": "Delete",
+  "deleteCondition": "Delete condition",
+  "deleteModalConfirmationText": "Are you sure you want to delete this condition?",
+  "deleteRelationship": "Delete Relationship",
+  "deleting": "Deleting",
   "delivery": "PARTO",
   "deliveryAttendant": "Atendido Por",
   "deliveryLocation": "Lugar del Parto",
@@ -187,10 +200,12 @@
   "encounterDetails": "Encounter details",
   "encountersList": "Encounters list",
   "endDate": "End date",
+  "endDateBeforeStartDate": "La fecha final no puede ser anterior a la fecha inicial",
   "endRelationship": "End relationship",
   "enterCondition": "Enter condition",
   "error": "Error",
   "errorCreatingCondition": "Error creating condition",
+  "errorDeletingCondition": "Error deleting condition",
   "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error Loading Patient Data",
   "errorState": "Error al cargar la leyenda",
@@ -208,6 +223,7 @@
   "failedSavingRelationship": "Relationship could not be saved",
   "family": "Familia",
   "familyContacts": "Family contacts",
+  "familyRelationship": "Relación Familiar",
   "familyRelationshipFormTitle": "Family Relationship Form",
   "fechaYHoraAtencion": "Date and Time of the Appointment",
   "feedingOrders": "Feeding Orders",
@@ -236,6 +252,7 @@
   "frecuenciaCardiaca": "Heart Rate",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
   "fromAge": "From Age",
+  "futureDateNotAllowed": "No puede ser una fecha en el futuro",
   "gastricLavage": "Lavado Gástrico",
   "gastricLavageCount": "Cantidad de Lavados Gástricos",
   "generalObservations": "Observaciones Generales",
@@ -254,6 +271,9 @@
   "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "HIV Status",
+  "hivStatusNegative": "Negativo",
+  "hivStatusPositive": "Positivo",
+  "hivStatusUnknown": "Desconocido",
   "hospitalizationTime": "Tiempo de Hospitalización",
   "htsClinicalView": "HTS Clinical View",
   "htsInitial": "HTS Initial Test",
@@ -272,6 +292,8 @@
   "inPatientSummary": "In Patient Summary",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "IPV Outcome",
+  "ipvOutcomeNegative": "Negativo - No se detectó violencia",
+  "ipvOutcomePositive": "Positivo - Se detectó violencia",
   "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Items per page",
   "kg": "kg",
@@ -374,6 +396,7 @@
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia",
+  "onDate": "On Date",
   "onsetDate": "Onset date",
   "operatingDoctor": "Operating Doctor",
   "otherRelationships": "Other Relationships",
@@ -396,6 +419,7 @@
   "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Patient family table",
   "patientInfo": "Información del Paciente",
+  "patientInformationRequired": "Por favor proporcione la información del paciente",
   "patientNotFound": "Patient Not Found",
   "patientPlaceHolder": "Search patient",
   "pending": "Pending",
@@ -412,7 +436,15 @@
   "PielYMucosas": "Skin and Mucosa",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
   "pleaseFillField": "Please complete the required fields",
+  "pnsAnonymousNotification": "Notificación anónima",
+  "pnsAnonymousNotificationDesc": "Se notifica sin revelar la identidad del paciente",
   "pnsAproach": "PNS Aproach",
+  "pnsDualNotification": "Notificación dual",
+  "pnsDualNotificationDesc": "Combinación de ambos métodos",
+  "pnsPatientNotification": "Notificación por el paciente",
+  "pnsPatientNotificationDesc": "El paciente notifica directamente a sus parejas",
+  "pnsProviderNotification": "Notificación por el proveedor",
+  "pnsProviderNotificationDesc": "***El personal de salud contacta a las parejas",
   "points": "puntos",
   "populationType": "Population type",
   "posición": "Position (O/I/NA)",
@@ -460,6 +492,7 @@
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to proceed?",
   "relationshipError": "Relationship Error",
   "relationshipErrorMessage": "Request Failed",
+  "relationshipSavedSuccessfully": "La relación familiar se guardó exitosamente",
   "relationshipType": "Relationship Type",
   "relationToPatient": "Relation to patient",
   "required": "Required",
@@ -478,6 +511,7 @@
   "savedRelationship": "Relationship ended successfully",
   "savedRlship": "Relationship saved successfully",
   "saveError": "Error saving consultation",
+  "saveRelationship": "Guardar Relación",
   "saveRlship": "Save Relationship",
   "saving": "Guardando...",
   "scheduled": "Próxima dosis",
@@ -485,6 +519,7 @@
   "searching": "Searching",
   "searchPatient": "Search patient",
   "seeAll": "See all",
+  "selectRelationshipPlaceholder": "Seleccione el tipo de relación con el paciente",
   "selectSeverity": "Seleccione severidad",
   "selectVaccine": "Select Vaccine",
   "service": "Service",
@@ -513,6 +548,7 @@
   "stoolCount": "Stool Count",
   "stoolGrams": "Stool Weight (g)",
   "submit": "Save and Close",
+  "success": "Éxito",
   "successfullyDeleted": "successfully deleted",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
@@ -555,6 +591,7 @@
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
   "umbilicalCord": " Umbilical cord",
+  "unknownError": "An unknown error occurred",
   "upcoming": "Upcoming",
   "upcomingAppointments": "Upcoming appointments",
   "upcomingCheckups": "Upcoming checkups",
