--- a/translations/es.json
+++ b/translations/es.json
@@ -47,6 +47,9 @@
   "apgar1Min": "Apgar al minuto 1",
   "apgar5": "APGAR 5 minutos",
   "apgar5Min": "Apgar al minuto 5",
+  "appointmentCancelError": "Error al cancelar Cita",
+  "appointmentCancelled": "Cita Cancelada",
+  "appointmentCancelledSuccessfully": "Cita Cancelada Exitosamente",
   "appointmentCheckedIn": "Cita registrada",
   "appointmentMarkedChecked": "Cita marcada como registrada",
   "appointments": "Citas",
@@ -74,7 +77,10 @@
   "bodyTemperature": "Temperatura corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "breastfeedingFirstHour": "Lactancia Primera Hora",
+  "calculateBirthDate": "Calcular Fecha de Nacimiento",
   "cancel": "Cancelar",
+  "cancelAppointment": "Cancelar Cita ",
+  "cancelAppointmentModalConfirmationText": "¿Estás seguro de que quieres cancelar esta cita?",
   "caracteristicaLoquios": "Característica de Loquios",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
@@ -105,11 +111,14 @@
   "cm": "cm",
   "completed": "Completado",
   "condition": "Condición",
+  "conditionDeleted": "Condición eliminada",
+  "conditionDeletedSuccessfully": "The condition has been deleted successfully",
   "conditionNowVisible": "Ahora es visible en la página de condiciones",
   "conditionRequired": "Se requiere una condición",
   "conditions": "Condiciones",
   "conditionSaved": "Condición guardada",
   "conditionUpdated": "Condición actualizada",
+  "confirmationQuestion": "¿Estas seguro de que quieres borrar esta relación?",
   "congenitalDisease": "Enfermedad Congénita",
   "consultationSaved": "Consulta guardada",
   "contact": "Contacto",
@@ -148,7 +157,11 @@
   "dead": "Muerto",
   "defaulterTracing": "Seguimiento de pacientes incumplidos",
   "delete": "Borrar",
-  "delivery": "PARTO",
+  "deleteCondition": "Brorar Condición",
+  "deleteModalConfirmationText": "¿Estas seguro de que quieres borrar esta condición?",
+  "deleteRelationship": "Borrar Relación",
+  "deleting": "Borrando",
+  "delivery": "Parto",
   "deliveryAttendant": "Atendido Por",
   "deliveryLocation": "Lugar del Parto",
   "deliveryOrAbortion": "Partos y Abortos",
@@ -187,10 +200,12 @@
   "encounterDetails": "Detalles del encuentro",
   "encountersList": "Lista de encuentros",
   "endDate": "Fecha final",
+  "endDateBeforeStartDate": "La fecha final no puede ser anterior a la fecha inicial",
   "endRelationship": "Finalizar relación",
   "enterCondition": "Ingrese la condición",
   "error": "Error",
   "errorCreatingCondition": "Error al crear condición",
+  "errorDeletingCondition": "Error borrando la condiciones",
   "errorLoadingData": "Error al cargar datos",
   "errorLoadingPatient": "Error al cargar los datos del paciente",
   "errorState": "Error al cargar la leyenda",
@@ -208,6 +223,7 @@
   "failedSavingRelationship": "No se pudo guardar la relación",
   "family": "Familia",
   "familyContacts": "Relaciones Familiares",
+  "familyRelationship": "Relación Familiar",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
   "fechaYHoraAtencion": "Fecha y hora de atención",
   "feedingOrders": "Órdenes de alimentación",
@@ -236,6 +252,7 @@
   "frecuenciaCardiaca": "Frecuencia cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardíaca fetal (por min.)",
   "fromAge": "From Age",
+  "futureDateNotAllowed": "No puede ser una fecha en el futuro",
   "gastricLavage": "Lavado gástrico",
   "gastricLavageCount": "Cantidad de lavados gástricos",
   "generalObservations": "Observaciones Generales",
@@ -254,6 +271,9 @@
   "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "Estado del VIH",
+  "hivStatusNegative": "Negativo",
+  "hivStatusPositive": "Positivo",
+  "hivStatusUnknown": "Desconocido",
   "hospitalizationTime": "Tiempo de Hospitalización",
   "htsClinicalView": "Vista clínica de HTS",
   "htsInitial": "Prueba inicial de detección del VIH",
@@ -272,6 +292,8 @@
   "inPatientSummary": "Resumen del paciente",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de evaluación IPV",
+  "ipvOutcomeNegative": "Negativo - No se detectó violencia",
+  "ipvOutcomePositive": "Positivo - Se detectó violencia",
   "ipvQuestions": "Preguntas sobre violencia de pareja íntima",
   "itemsPerPage": "Elementos por página",
   "kg": "kg",
@@ -374,6 +396,7 @@
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia del evento",
+  "onDate": "A la fecha",
   "onsetDate": "Fecha de inicio",
   "operatingDoctor": "Médico cirujano",
   "otherRelationships": "Otras relaciones",
@@ -397,6 +420,7 @@
   "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Tabla de contactos familiares",
   "patientInfo": "Información del Paciente",
+  "patientInformationRequired": "Por favor proporcione la información del paciente",
   "patientNotFound": "Paciente no encontrado",
   "patientPlaceHolder": "Buscar Paciente",
   "pending": "Pendiente",
@@ -413,7 +437,15 @@
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
   "pleaseFillField": "Por favor complete los campos requeridos",
+  "pnsAnonymousNotification": "Notificación anónima",
+  "pnsAnonymousNotificationDesc": "Se notifica sin revelar la identidad del paciente",
   "pnsAproach": "Enfoque de notificación de parejas (PNS)",
+  "pnsDualNotification": "Notificación dual",
+  "pnsDualNotificationDesc": "Combinación de ambos métodos",
+  "pnsPatientNotification": "Notificación por el paciente",
+  "pnsPatientNotificationDesc": "El paciente notifica directamente a sus parejas",
+  "pnsProviderNotification": "Notificación por el proveedor",
+  "pnsProviderNotificationDesc": "***El personal de salud contacta a las parejas",
   "points": "puntos",
   "populationType": "Tipo de población",
   "posición": "Posición (O/I/Na)",
@@ -461,6 +493,7 @@
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
   "relationshipError": "Error de relación",
   "relationshipErrorMessage": "Solicitud fallida",
+  "relationshipSavedSuccessfully": "La relación familiar se guardó exitosamente",
   "relationshipType": "Tipo de relación",
   "relationToPatient": "Relación con el paciente",
   "required": "Requerido",
@@ -479,6 +512,7 @@
   "savedRelationship": "Relación guardada con éxito",
   "savedRlship": "Relación guardada exitosamente",
   "saveError": "Error al guardar consulta",
+  "saveRelationship": "Guardar Relación",
   "saveRlship": "Guardar relación",
   "saving": "Guardando...",
   "scheduled": "Programado",
@@ -486,6 +520,7 @@
   "searching": "Buscando...",
   "searchPatient": "Search patient",
   "seeAll": "Ver Todo",
+  "selectRelationshipPlaceholder": "Seleccione el tipo de relación con el paciente",
   "selectSeverity": "Seleccione la severidad",
   "selectVaccine": "Seleccione vacuna",
   "service": "Servicio",
@@ -514,6 +549,7 @@
   "stoolCount": "Número de deposiciones",
   "stoolGrams": "Peso de deposiciones (g)",
   "submit": "Guardar y cerrar",
+  "success": "Éxito",
   "successfullyDeleted": "Eliminado con éxito",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
@@ -556,6 +592,7 @@
   "type": "Tipo",
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
+  "unknownError": "Un error Desconocido ocurrio",
   "upcoming": "Próximo (duda)",
   "upcomingAppointments": "Próximas citas",
   "upcomingCheckups": "Próximos controles",
