fix: actualizar traducciones para relaciones no familiares y detalles de embarazo

--- a/translations/es.json
+++ b/translations/es.json
@@ -57,7 +57,7 @@
   "appointmentType": "Tipo de cita",
   "AtencionesPuerperio": "Atenciones puerperio",
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
-  "balanceOverview": "Balance de líquidos",
+  "balanceOverview": "Balance de líquidos del Recién Nacido",
   "baselineHivStatus": "Estado basal del VIH",
   "baselineInformation": "Información basal",
   "baselineStatus": "Estado basal del VIH",
@@ -122,7 +122,7 @@
   "congenitalDisease": "Enfermedad Congénita",
   "consultationSaved": "Consulta guardada",
   "contact": "Contacto",
-  "contactCreated": "Contacto creado",
+  "contactCreated": "Contacto sexual registrado",
   "contacted": "Contactado",
   "contactList": "Contactos Sexuales",
   "controlPuerperio": "Control de puerperio",
@@ -399,7 +399,7 @@
   "onDate": "A la fecha",
   "onsetDate": "Fecha de inicio",
   "operatingDoctor": "Médico cirujano",
-  "otherRelationships": "Otras relaciones",
+  "otherRelationships": "Relaciones No Familiares",
   "otherSubstanceAbuse": "Abuso de otras sustancias",
   "outcomes": "Resultados",
   "overdue": "Atrasado",
