fix: agregar icono de alojamiento conjunto en el componente de atención neonatal

--- a/translations/en.json
+++ b/translations/en.json
@@ -31,6 +31,7 @@
   "alcoholUseDuration": "Alcohol Use Duration",
   "alive": "Alive",
   "all": "All",
+  "alojamientoConjunto": "Alojamiento Conjunto",
   "alturaUterina": "Fundal height (cm)",
   "amnioticFluid": "Amniotic Fluid",
   "analPermeability": "Anal Permeability",
