--- a/translations/es.json
+++ b/translations/es.json
@@ -31,6 +31,7 @@
   "alcoholUseDuration": "Duración del consumo de alcohol",
   "alive": "Vivo",
   "all": "Todos",
+  "alojamientoConjunto": "Alojamiento Conjunto",
   "alturaUterina": "Altura uterina (cm)",
   "amnioticFluid": "Líquido amniótico",
   "analPermeability": "Permeabilidad anal",
