fix: actualizar traducciones para gráficos obstétricos y corregir título en el componente de vista previa

--- a/translations/en.json
+++ b/translations/en.json
@@ -395,6 +395,7 @@
   "observation": "Observation",
   "observationGroup": "Grupo de Observación",
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
+  "obstetricalCharts": "Obstetrical Charts",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia",
   "onDate": "On Date",
@@ -466,7 +467,6 @@
   "prenatalCareLocation": "Lugar de Atenciones Prenatales",
   "prenatalCareNumber": "Nº de Atenciones Prenatales",
   "prenatalCareTabs": "Pestañas de Control Prenatal",
-  "prenatalMeasurements": "Mediciones Prenatales",
   "presentación": "Presentation (C/P/NA)",
   "presionDiastolica": "Diastolic Pressure",
   "presionSistolica": "Systolic Pressure",
