--- a/translations/es.json
+++ b/translations/es.json
@@ -395,6 +395,7 @@
   "observation": "Observación",
   "observationGroup": "Grupo de Observación",
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
+  "obstetricalCharts": "Gráficos Obstétricos",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia del evento",
   "onDate": "A la fecha",
@@ -467,7 +468,6 @@
   "prenatalCareLocation": "Lugar de Atenciones Prenatales",
   "prenatalCareNumber": "Nº de Atenciones Prenatales",
   "prenatalCareTabs": "Pestañas de Control Prenatal",
-  "prenatalMeasurements": "Mediciones Prenatales",
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Presión sistólica",
