actualizado workspace.tsx

--- a/translations/es.json
+++ b/translations/es.json
@@ -57,6 +57,7 @@
   "appointmentToFulfill": "Seleccione la cita a atender",
   "appointmentType": "Tipo de cita",
   "AtencionesPuerperio": "Atenciones puerperio",
+  "attendedAge": "Edad atención",
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
   "balanceOverview": "Balance de líquidos del Recién Nacido",
   "baselineHivStatus": "Estado basal del VIH",
@@ -111,6 +112,7 @@
   "clinicalViews": "Vistas clínicas",
   "cm": "cm",
   "completed": "Completado",
+  "completeRequiredFields": "Por favor complete los campos requeridos (Fecha y Hora de atención).",
   "condition": "Condición",
   "conditionDeleted": "Condición eliminada",
   "conditionDeletedSuccessfully": "The condition has been deleted successfully",
@@ -121,11 +123,14 @@
   "conditionUpdated": "Condición actualizada",
   "confirmationQuestion": "¿Estas seguro de que quieres borrar esta relación?",
   "congenitalDisease": "Enfermedad Congénita",
+  "consultationDate": "Fecha atención",
   "consultationSaved": "Consulta guardada",
+  "consultationTime": "Hora atención",
   "contact": "Contacto",
   "contactCreated": "Contacto sexual registrado",
   "contacted": "Contactado",
   "contactList": "Contactos Sexuales",
+  "controlNumber": "Número de control CRED",
   "controlPuerperio": "Control de puerperio",
   "controlsAndAtentions": "Atenciones y Controles",
   "coordinacion": "Coordinación",
@@ -134,6 +139,8 @@
   "credAgeGroups": "Control CRED según edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
+  "credControlsTitle": "Control de Crecimiento y Desarrollo (CRED)",
+  "credForms": "Formularios CRED",
   "CuidadoPrenatal": "Cuidado Prenatal",
   "culturalContext": "Contexto Cultural",
   "culturalNotes": "Notas Culturales y Contextuales",
@@ -204,6 +211,7 @@
   "endDateBeforeStartDate": "La fecha final no puede ser anterior a la fecha inicial",
   "endRelationship": "Finalizar relación",
   "enterCondition": "Ingrese la condición",
+  "enterControlNumber": "Ingrese número de control",
   "error": "Error",
   "errorCreatingCondition": "Error al crear condición",
   "errorDeletingCondition": "Error borrando la condiciones",
@@ -249,6 +257,8 @@
   "fontanelle": "Fontanela",
   "fontanelleOther": "Otras observaciones sobre fontanela",
   "formInvalidFields": "Por favor revise los siguientes campos:",
+  "formName": "Nombre del Formulario (A-Z)",
+  "forms": "Forms",
   "formTitle": "Complete los detalles del formulario",
   "frecuenciaCardiaca": "Frecuencia cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardíaca fetal (por min.)",
@@ -304,6 +314,7 @@
   "labourDetails": "Detalles del trabajo de parto",
   "labourHistorySummary": "Resumen del embarazo y parto",
   "labourMetricDisplayed": "Métricas del trabajo de parto mostradas",
+  "lastCompleted": "Última Vez Completado",
   "lastName": "Apellido Paterno",
   "lastName2": "Apellido Materno",
   "lastNamePlaceholder": "Apellido",
@@ -358,6 +369,7 @@
   "neonatalSummary": "Resumen neonatal",
   "neurologicalEvaluation": "Valoración neurológica",
   "neurologicalEvaluationOther": "Otras observaciones sobre la valoración neurológica",
+  "never": "Nunca",
   "newbornAntropometrics": "Antropometría del recién nacido",
   "newbornEvaluation": "Evaluación del Recién Nacido",
   "newbornVitals": "Signos Vitales del Recién Nacido",
@@ -481,6 +493,7 @@
   "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
+  "recentCredControls": "Controles CRED Recientes",
   "recommendation": "Recomendación",
   "recommendedProcedure": "Procedimiento recomendado",
   "recordAnthropometrics": "Registrar Datos Antropométricos",
@@ -510,6 +523,7 @@
   "rural": "Rural/Andino",
   "save": "Guardar",
   "saveAndClose": "Guardar y Cerrar",
+  "saveAndContinue": "Guardar y Continuar",
   "savedRelationship": "Relación guardada con éxito",
   "savedRlship": "Relación guardada exitosamente",
   "saveError": "Error al guardar consulta",
@@ -520,6 +534,7 @@
   "searchConditions": "Condiciones de búsqueda",
   "searching": "Buscando...",
   "searchPatient": "Search patient",
+  "searchThisList": "Buscar en esta lista",
   "seeAll": "Ver Todo",
   "selectRelationshipPlaceholder": "Seleccione el tipo de relación con el paciente",
   "selectSeverity": "Seleccione la severidad",
