--- a/translations/en.json
+++ b/translations/en.json
@@ -57,6 +57,7 @@
   "appointmentToFulfill": "Select appointment to fulfill",
   "appointmentType": "Appointment type",
   "AtencionesPuerperio": "Postpartum Care",
+  "attendedAge": "Edad atención",
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "balanceOverview": "Fluid Balance",
   "baselineHivStatus": "Baseline HIV Status",
@@ -111,6 +112,7 @@
   "clinicalViews": "Clinical views",
   "cm": "cm",
   "completed": "Administrado",
+  "completeRequiredFields": "Por favor complete los campos requeridos (Fecha y Hora de atención).",
   "condition": "Condition",
   "conditionDeleted": "Condition deleted",
   "conditionDeletedSuccessfully": "The condition has been deleted successfully",
@@ -121,11 +123,14 @@
   "conditionUpdated": "Condition updated",
   "confirmationQuestion": "Are you sure you want to delete relationship?",
   "congenitalDisease": "Enfermedad Congénita",
+  "consultationDate": "Fecha atención",
   "consultationSaved": "Consultation Saved",
+  "consultationTime": "Hora atención",
   "contact": "Contact",
   "contactCreated": "Contact created",
   "contacted": "Contacted",
   "contactList": "Contact list",
+  "controlNumber": "Número de control CRED",
   "controlPuerperio": "Postpartum Checkups",
   "controlsAndAtentions": "Atenciones y Controles",
   "coordinacion": "Coordinación",
@@ -134,6 +139,8 @@
   "credAgeGroups": "Control Según Edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
+  "credControlsTitle": "Control de Crecimiento y Desarrollo (CRED)",
+  "credForms": "Formularios CRED",
   "CuidadoPrenatal": "Cuidado Prenatal",
   "culturalContext": "Contexto Cultural",
   "culturalNotes": "Notas Culturales y Contextuales",
@@ -204,6 +211,7 @@
   "endDateBeforeStartDate": "La fecha final no puede ser anterior a la fecha inicial",
   "endRelationship": "End relationship",
   "enterCondition": "Enter condition",
+  "enterControlNumber": "Ingrese número de control",
   "error": "Error",
   "errorCreatingCondition": "Error creating condition",
   "errorDeletingCondition": "Error deleting condition",
@@ -249,6 +257,8 @@
   "fontanelle": "Fontanelle",
   "fontanelleOther": "Other (Fontanelle)",
   "formInvalidFields": "Please review the following fields:",
+  "formName": "Nombre del Formulario (A-Z)",
+  "forms": "Forms",
   "formTitle": "Fill in the form details",
   "frecuenciaCardiaca": "Heart Rate",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
@@ -304,6 +314,7 @@
   "labourDetails": "Labour Details",
   "labourHistorySummary": "Summary of labour history",
   "labourMetricDisplayed": "Labour History Metric",
+  "lastCompleted": "Última Vez Completado",
   "lastName": "Last name",
   "lastName2": "Segundo Apellido",
   "lastNamePlaceholder": "Last name",
@@ -358,6 +369,7 @@
   "neonatalSummary": "Neonatal Summary",
   "neurologicalEvaluation": "Neurological Evaluation ",
   "neurologicalEvaluationOther": "Other for Neurological Evaluation",
+  "never": "Nunca",
   "newbornAntropometrics": "Newborn Antropometrics",
   "newbornEvaluation": "Evaluation of the newborn",
   "newbornVitals": "Signos Vitales del Recién Nacido",
@@ -480,6 +492,7 @@
   "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
+  "recentCredControls": "Controles CRED Recientes",
   "recommendation": "Recomendación",
   "recommendedProcedure": "Recommended Procedure",
   "recordAnthropometrics": "Registrar Datos Antropométricos",
@@ -509,6 +522,7 @@
   "rural": "Rural/Andino",
   "save": "Save",
   "saveAndClose": "Guardar y Cerrar",
+  "saveAndContinue": "Guardar y Continuar",
   "savedRelationship": "Relationship ended successfully",
   "savedRlship": "Relationship saved successfully",
   "saveError": "Error saving consultation",
@@ -519,6 +533,7 @@
   "searchConditions": "Search conditions",
   "searching": "Searching",
   "searchPatient": "Search patient",
+  "searchThisList": "Buscar en esta lista",
   "seeAll": "See all",
   "selectRelationshipPlaceholder": "Seleccione el tipo de relación con el paciente",
   "selectSeverity": "Seleccione severidad",
