refactor: actualizar títulos y traducciones en el dashboard neonatal

--- a/translations/es.json
+++ b/translations/es.json
@@ -362,7 +362,7 @@
   "neck": "Cuello",
   "neckOther": "Otras observaciones sobre el cuello",
   "neonatalAbnormalities": "Anormalidades neonatales",
-  "neonatalCare": "Historia Neonatal",
+  "neonatalCare": "Curso de Vida del Niño",
   "neonatalCareTabs": "Pestañas de Atención Neonatal",
   "neonatalCounseling": "Consejeria sobre lactancia materna",
   "neonatalProblems": "Problemas neonatales",
@@ -370,9 +370,9 @@
   "neurologicalEvaluation": "Valoración neurológica",
   "neurologicalEvaluationOther": "Otras observaciones sobre la valoración neurológica",
   "never": "Nunca",
-  "newbornAntropometrics": "Antropometría del recién nacido",
+  "newbornAntropometrics": "Antropometría",
   "newbornEvaluation": "Evaluación del Recién Nacido",
-  "newbornVitals": "Signos Vitales del Recién Nacido",
+  "newbornVitals": "Signos Vitales del Niño",
   "newCredEncounter": "Nuevo control CRED",
   "next": "Siguiente",
   "nextMonth": "Siguiente mes",
@@ -441,7 +441,7 @@
   "percentiles": "Percentiles",
   "perinatalDataRecorded": "Datos perinatales registrados",
   "perinatalDataSaveError": "Error al guardar datos perinatales",
-  "perinatalRecord": "Registro Perinatal",
+  "perinatalRecord": "Antecedentes Perinatales",
   "perinatalRegister": "Carnet Materno Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
